<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.framgia.hien.moviedb.screen.setting.SettingFragment" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_8">

        <ImageView
            android:id="@+id/image_sync"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/ic_sync_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/tittle_syn"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toEndOf="@+id/image_sync"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_rate"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_stars_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_sync" />

        <TextView
            android:id="@+id/text_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_36"
            android:text="@string/tittle_rate_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toEndOf="@+id/image_rate"
            app:layout_constraintTop_toBottomOf="@+id/text_sync" />

        <ImageView
            android:id="@+id/image_info"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_info_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_rate" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_36"
            android:text="@string/tittle_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toEndOf="@+id/image_info"
            app:layout_constraintTop_toBottomOf="@+id/text_rate" />

        <ImageView
            android:id="@+id/image_help"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_12"
            android:src="@drawable/ic_help_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_21"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_36"
            android:text="@string/tittle_help"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toEndOf="@+id/image_help"
            app:layout_constraintTop_toBottomOf="@+id/text_info" />
    </android.support.constraint.ConstraintLayout>
</layout>
