<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.framgia.hien.moviedb.screen.company.CompanyViewModel"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/color_red"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_toolbar_back_icon"
                        android:layout_width="@dimen/dp_48"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:layout_marginTop="@dimen/dp_8"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:onClick="@{viewModel::onBackClicked}"
                        android:src="@drawable/ic_arrow_back_white_24dp"
                        android:layout_marginLeft="@dimen/dp_8" />

                    <TextView
                        android:id="@+id/text_toolbar_title"
                        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:layout_marginTop="@dimen/dp_8"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_toolbar_back_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="@dimen/dp_8" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.CardView
                android:id="@+id/card_company_profile"
                android:layout_width="@dimen/dp_240"
                android:layout_height="@dimen/dp_160"
                android:layout_marginTop="@dimen/dp_4"
                app:cardCornerRadius="@dimen/dp_8"
                app:cardElevation="@dimen/dp_8"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:layout_marginLeft="@dimen/dp_4">

                <ImageView
                    android:id="@+id/image_company_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_2"
                    android:scaleType="fitXY"
                    app:imageUrl="@{viewModel.companyObservableField.logoPath}"
                    app:srcCompat="@drawable/movie_detail_poster_sample" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/text_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:ellipsize="marquee"
                android:focusable="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:text="@{viewModel.companyObservableField.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/color_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_company_profile"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_16" />

            <TextView
                android:id="@+id/text_company_headquarters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/tittle_headquater"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_name"
                android:layout_marginLeft="@dimen/dp_36" />

            <TextView
                android:id="@+id/text_company_headquarters_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.companyObservableField.headquarters}"
                app:layout_constraintStart_toEndOf="@+id/text_company_headquarters"
                app:layout_constraintTop_toTopOf="@+id/text_company_headquarters"
                android:layout_marginLeft="@dimen/dp_8" />

            <TextView
                android:id="@+id/text_company_origin_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/tittle_origin_country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_headquarters"
                android:layout_marginLeft="@dimen/dp_36" />

            <TextView
                android:id="@+id/text_company_origin_country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.companyObservableField.originCountry}"
                app:layout_constraintStart_toEndOf="@+id/text_company_origin_country"
                app:layout_constraintTop_toTopOf="@+id/text_company_origin_country"
                android:layout_marginLeft="@dimen/dp_8" />

            <TextView
                android:id="@+id/text_company_related_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/tittle_related_movies"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_origin_country_value"
                android:layout_marginLeft="@dimen/dp_24" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_company_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal"
                app:recyclerAdapter="@{viewModel.movieAdapter}"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_company_related_movies" />
            <ProgressBar
                android:id="@+id/progress_company_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_212"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
